Added warning in case of upload of executables
